myhome/src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Degree__c</fullName>
        <inlineHelpText>Select the appropriative Degree from drop down</inlineHelpText>
        <label>Degree</label>
        <picklist>
            <picklistValues>
                <fullName>Under Graduation</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Graduation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Graduation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hostel__c</fullName>
        <label>Hostel</label>
        <referenceTo>Hostel__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Specialization__c</fullName>
        <inlineHelpText>please select the approriative specialization</inlineHelpText>
        <label>Specialization</label>
        <picklist>
            <controllingField>Degree__c</controllingField>
            <picklistValues>
                <fullName>Bcom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bsc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mtech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>collegename__c</fullName>
        <label>college</label>
        <referenceTo>college__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>number_of_backlocks__c</fullName>
        <label>number of backlocks</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>students_from_telangana</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Degree__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Degree__c</field>
            <operation>equals</operation>
            <value>Under Graduation</value>
        </filters>
        <label>unergrauates</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>SC_students</fullName>
        <active>true</active>
        <label>SC students</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>